--- a/app.css
+++ b/app.css
@@ -2,17 +2,15 @@
     height: 50px;
     width: 50px;
 }
-footer {
-    background-color: #333;
-    width: 100%;
-    bottom: 0;
-    position: fixed;
+#games {
+    height: 300px;
+    overflow-y: auto;
 }
-#games{
-    height:300px;
-    overflow-y:auto;
+#players {
+    height: 200px;
+    overflow-y: auto;
 }
-#players{
-    height:200px;
-    overflow-y:auto;
+#player-info {
+    height: 400px;
+    overflow-y: auto;
 }
