--- a/partials/templates.html
+++ b/partials/templates.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
-    In Progress
+    <div class="card">
+        <div id="inProgress" class="card-content"><span class="card-title grey-text text-darken-4">In Progress......</span>
+        </div>
+    </div>
 </body>
 
 </html>
