--- a/partials/two-way-binding.html
+++ b/partials/two-way-binding.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s12 m6">
         <div class="card">
-            <div id="games" class="card-content">
+            <div class="card-content checkCards">
                 <span class="card-title grey-text text-darken-4">Games</span>
                 <div ng-repeat="item in games">
                     <div>
@@ -14,10 +14,10 @@
     </div>
     <div class="col s12 m6">
         <div class="card">
-            <div id="players" class="card-content"><span class="card-title grey-text text-darken-4">Players</span><span class="grey-text"> (Select Games)</span>
-                <div ng-repeat="x in players | bySelectedGames:selected_games">
-                    <input id="{{x.name + 'Checkbox'}}" type="checkbox" value="{{x.name}}" ng-change="syncSelectedPlayers(bool, x.name)" ng-model="bool" >
-                    <label for="{{x.name + 'Checkbox'}}">{{x.name}}</label>
+            <div class="card-content checkCards"><span class="card-title grey-text text-darken-4">Players</span><span class="grey-text"> (Select Games)</span>
+                <div ng-repeat="x in players | bySelectedGames:selected_games" class="repeat-animation">
+                        <input id="{{x.name + 'Checkbox'}}" type="checkbox" value="{{x.name}}" ng-change="syncSelectedPlayers(bool, x.name)" ng-model="bool">
+                        <label for="{{x.name + 'Checkbox'}}">{{x.name}}</label>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     </thead>
 
                     <tbody>
-                        <tr ng-repeat="x in players | bySelectedPlayers:selected_players">
+                        <tr ng-repeat="x in players | bySelectedPlayers:selected_players" class="repeat-animation">
                             <td>{{x.name}}</td>
                             <td>{{x.Age}}</td>
                             <td>{{x.game}}</td>
